--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "vite": "^3.1.3",
     "vite-plugin-wasm": "^3.0.0"
+  },
+  "dependencies": {
+    "my-ctl-project": "file:my-ctl-project"
   }
 }
